new post addition

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header'); -%>
 <h1>HOME</h1>
-<p><%=home%></p>
+<p class="intro"><%=home%></p>
 
 <% customPost.forEach(function(singlePost){ %>
     <h1><%= singlePost.postTitle %></h1>
