--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
 <%- include('partials/header'); -%>
 <h1>About</h1>
-<p><%=about%></p>
+<p class="intro"><%=about%></p>
 <%- include('partials/footer'); -%>
